{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 185,
  "lineage": "2ef6fe70-6551-3bff-4b3f-ee1482dce78c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "es-labElasticIp",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06fac921396ce8e2c",
            "domain": "vpc",
            "id": "eipalloc-01f48b5a0d56d9dc3",
            "instance": "i-0749d2b2ab0e61d90",
            "network_interface": "eni-01022683c03fd8aff",
            "private_dns": "ip-10-150-0-143.ec2.internal",
            "private_ip": "10.150.0.143",
            "public_dns": "ec2-3-213-137-38.compute-1.amazonaws.com",
            "public_ip": "3.213.137.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.es-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "es-lab",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5ae5525eb033d0a",
            "arn": "arn:aws:ec2:us-east-1:684135021874:instance/i-0749d2b2ab0e61d90",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0749d2b2ab0e61d90",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "es-lab-keyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-01022683c03fd8aff",
            "private_dns": "ip-10-150-0-143.ec2.internal",
            "private_ip": "10.150.0.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ef2c63700d4c6805",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af5a4f0d5a5b0efc",
            "tags": {
              "Name": "es-lab-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00060b6d6e445bbaf"
            ]
          },
          "depends_on": [
            "aws_security_group.es-labSG",
            "aws_subnet.es-labSubnet",
            "data.aws_ami.ubuntu",
            "data.template_cloudinit_config.esInit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-031d25504344f0bd7",
            "owner_id": "684135021874",
            "tags": {
              "name": "es-lab"
            },
            "vpc_id": "vpc-0645c07afa6d61a1b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "es-labRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00258b7f796325059",
            "owner_id": "684135021874",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031d25504344f0bd7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "es-lab-RouteTable"
            },
            "vpc_id": "vpc-0645c07afa6d61a1b"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "es-labRouteTableAssociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09561d4a6d3096f32",
            "route_table_id": "rtb-00258b7f796325059",
            "subnet_id": "subnet-0af5a4f0d5a5b0efc"
          },
          "depends_on": [
            "aws_route_table.es-labRouteTable",
            "aws_subnet.es-labSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "es-labSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684135021874:security-group/sg-00060b6d6e445bbaf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00060b6d6e445bbaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.150.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20191021201949056400000001",
            "name_prefix": null,
            "owner_id": "684135021874",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0645c07afa6d61a1b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "es-labSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684135021874:subnet/subnet-0af5a4f0d5a5b0efc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.150.0.0/24",
            "id": "subnet-0af5a4f0d5a5b0efc",
            "map_public_ip_on_launch": false,
            "owner_id": "684135021874",
            "tags": {
              "name": "es-lab"
            },
            "vpc_id": "vpc-0645c07afa6d61a1b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684135021874:vpc/vpc-0645c07afa6d61a1b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.150.0.0/24",
            "default_network_acl_id": "acl-062d4bd3318d222c8",
            "default_route_table_id": "rtb-0e8e537497d064277",
            "default_security_group_id": "sg-0336b02e0dcce8517",
            "dhcp_options_id": "dopt-04b32aa21e7917b3b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0645c07afa6d61a1b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e8e537497d064277",
            "owner_id": "684135021874",
            "tags": {
              "name": "es-lab"
            }
          }
        }
      ]
    }
  ]
}